Fix h2 AAA color contrast

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -130,7 +130,7 @@ section h2{
     padding: 0.7rem 0;
     font-size: 1rem;
     font-weight: 400;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     text-align: center;
     color: var(--accent-color2);
 }
